@@ -1,5 +1,7 @@
 2001-02-20  Tambet Ingo  <tambet@ximian.com>
 
+	* boot.pl.in (xst_boot_parse_images): New (and nice) function to get images.
+
 	* boot-conf.in (xml_print_global_kws): New function, splitted from 
 	(xml_print_globals), added more known tags.
 
